# reading-app

./: .gitattributes  .gitignore  .prettierignore  cabal.project  flake.nix  format-haskell.sh  jsconfig.json  package-lock.json  package.json
cc-cedict/: cc-cedict.cabal
cc-cedict/src/: CCCEdict.hs
cc-cedict/src/CCCEdict/: Pinyin.hs
diskdata/: README.md  diskdata.cabal
diskdata/src/: DiskData.hs
reading-app/: reading-app.cabal
reading-app/exe/: Main.hs
reading-app/exe/ReadingApp/: API.hs  BestPath.hs  Config.hs  Db.hs  Dict.hs  PhraseIndex.hs  RAM.hs  Tokenize.hs
reading-app/exe/ReadingApp/API/: ReadThrough.hs  ReadThroughs.hs  Readthrough.hs
reading-app/exe/ReadingApp/Db/: Index.hs  ReadThrough.hs
reading-app/exe/ReadingApp/Dict/: CCCEdict.hs
reading-app/exe/ReadingApp/Page/: Import.hs  NextWord.hs  Reading.hs  Search.hs  Wrapper.hs
reading-app/exe/ReadingApp/Pages/: ReadThrough.hs  ReadThroughs.hs
reading-app/exe/ReadingApp/Views/: Wrapper.hs
reading-app/www/: index.html
reading-app/www/css/: reading-app.css  simple.css
reading-app/www/js/: api-types.d.ts  dom.js  main.js
reading-app/www/js/components/: app.js  readthrough-types.d.ts  readthrough.js  readthroughs.js
reading-app/www/js/components/readthrough/: tokenizer.js
reading-app/www/js/pages/: readthrough.js  readthroughs.js
reading-app/www/js/pages/readthrough/: learning.js  tokenize.js
