cabal-version: 3.4
name: diskdata
version: 0.1.0.0
license: NONE
build-type: Simple

library
    hs-source-dirs: src
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
      RecordWildCards
    build-depends: 
      aeson,
      base ^>=4.19.1.0,
      filepath,
      mtl,
      streaming,
      text,
      vector,
    exposed-modules:
      DiskData
    other-modules:
