cabal-version: 3.4
name: reading-app
version: 0.1.0.0
license: NONE
build-type: Simple

executable reading-app
    main-is: Main.hs
    hs-source-dirs: exe
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
      RecordWildCards
      LambdaCase
      OverloadedStrings
      DataKinds
      DerivingVia
    build-depends:
      aeson, 
      base ^>=4.19.1.0,
      blaze-html,
      cc-cedict,
      containers,
      directory,
      diskdata,
      filepath,
      mtl,
      servant,
      servant-blaze,
      servant-server,
      streaming,
      text,
      unicode-data-scripts,
      vector,
      wai,
      warp,
      
    other-modules:
      ReadingApp.Db
      ReadingApp.Db.Index
      ReadingApp.Dict.CCCEdict
      ReadingApp.Page.Import
      ReadingApp.Page.Reading
      ReadingApp.Page.Search
      ReadingApp.Page.Wrapper
      ReadingApp.PhraseIndex
      ReadingApp.RAM
