cabal-version: 3.4
name: reading-app
version: 0.1.0.0
license: NONE
build-type: Simple

executable reading-app
    main-is: Main.hs
    hs-source-dirs: exe
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
      RecordWildCards
      LambdaCase
      OverloadedStrings
      DataKinds
      DerivingVia
    build-depends:
      aeson,
      base ^>=4.19.1.0,
      cc-cedict,
      containers,
      directory,
      diskdata,
      filepath,
      http-api-data,
      mtl,
      servant,
      servant-server,
      streaming,
      text,
      time,
      unicode-data-scripts,
      unordered-containers,
      wai,
      warp,

    other-modules:
      ReadingApp.API.Readthrough
      ReadingApp.BestPath
      ReadingApp.Dict
      ReadingApp.Dict.CCCEdict
      ReadingApp.PhraseIndex
      ReadingApp.RAM
      ReadingApp.Tokenize
