cabal-version: 3.4
name: reading-app
version: 0.1.0.0
license: NONE
build-type: Simple

executable reading-app
    main-is: Main.hs
    hs-source-dirs: exe
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
      DataKinds
      DerivingVia
      LambdaCase
      OverloadedStrings
      RecordWildCards
    build-depends:
      aeson,
      base ^>=4.19.1.0,
      blaze-html,
      cc-cedict,
      containers,
      directory,
      diskdata,
      filepath,
      http-api-data,
      mtl,
      servant,
      servant-blaze,
      servant-server,
      streaming,
      text,
      time,
      unicode-data-scripts,
      unordered-containers,
      wai,
      warp,

    other-modules:
      ReadingApp.API
      ReadingApp.API.ReadThrough
      ReadingApp.API.ReadThroughs
      ReadingApp.BestPath
      ReadingApp.Config
      ReadingApp.Db.ReadThrough
      ReadingApp.Dict
      ReadingApp.Dict.CCCEdict
      ReadingApp.Pages.ReadThrough
      ReadingApp.Pages.ReadThroughs
      ReadingApp.PhraseIndex
      ReadingApp.RAM
      ReadingApp.Tokenize
      ReadingApp.Views.Wrapper
